--- a/index.html
+++ b/index.html
@@ -17,17 +17,17 @@
     </header>
     <section class="details">
       <h1>Introduction</h1>
-      <p>Details here...</p>
+      <p>I am an aspiring software developer.</p>
       <h1>Where I'm From</h1>
-      <p>Details here...</p>
+      <p>I was raised in Salisbury, Maryland and currently reside in Baltimore, Maryland.</p>
       <h1>What are your favorite hobbies?</h1>
-      <p>Details here...</p>
+      <p>My favorite hobbies include skateboarding, reading comics, and playing video games.</p>
       <h1>What's your dream job?</h1>
-      <p>Details here...</p>
+      <p>My dream job is to become a software developer for a gaming company.</p>
       <h1>Where do you live?</h1>
-      <p>Details here...</p>
+      <p>I live in Baltimore, Maryland.</p>
       <h1>Why do you want to be a web developer?</h1>
-      <p>Details here...</p>
+      <p>To impact the future and change the world one page at a time!</p>
     </section>
 
     <footer id="footer">
